# Driverless_EV_Project

./: README.md  lidar_camera_fusion.py  test.py
carla/: lidar_camera_fusion.py
install/: local_setup.sh  setup.sh
install/perception_msgs/include/perception_msgs/perception_msgs/msg/: object_detections.h  object_detections.hpp
install/perception_msgs/share/perception_msgs/: local_setup.sh  package.ps1  package.sh
install/perception_msgs/share/perception_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  export_perception_msgs__rosidl_generator_cExport.cmake  export_perception_msgs__rosidl_generator_pyExport.cmake  export_perception_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  perception_msgs__rosidl_typesupport_cppExport.cmake  perception_msgs__rosidl_typesupport_introspection_cExport.cmake  perception_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake
install/perception_msgs/share/perception_msgs/msg/: BoundingBox.idl  ObjectDetections.msg
install/sensor_fusion/share/ament_index/resource_index/package_run_dependencies/: sensor_fusion
install/sensor_fusion/share/sensor_fusion/: local_setup.dsv  package.sh
install/sensor_fusion/share/sensor_fusion/cmake/: ament_cmake_export_dependencies-extras.cmake
log/: latest_build
perception/: get_realsense_intrinsics.py  lidar_camera_fusion.py  realsense_camera_stream.py
perception/ouster/: get_lidar_points.py  get_ouster_metadata.py
perception/realsense/: get_realsense_intrinsics.py  realsense_camera_stream.py
perception/zed/: get_zed_intrinsics.py  zed_camera_stream.py
src/perception_msgs/: CMakeLists.txt  package.xml
src/perception_msgs/msg/: BoundingBox.msg
src/sensor_fusion/: CMakeLists.txt
src/sensor_fusion/sensor_fusion/: yolo_detector.py
(+30 files in other folders)
