<?xml version="1.0"?>
<package format="3">
  <name>perception_msgs</name>
  <version>0.0.1</version>
  <description>Custom message definitions for CARLA perception (bounding boxes and object detections).</description>
  
  <maintainer email="yashpurswani4@gmail.com">Yash Purswani</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
